installed express and created a backtool folder

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "This tool cli creates a backend setup with express js mongodb or postgresql",
   "main": "index.js",
-  "type":"module",
-  "bin":{
-    "backtool":"index.js"
+  "type": "module",
+  "bin": {
+    "backtool": "index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.4.1",
+    "express": "^5.1.0",
     "figlet": "^1.8.1",
     "inquirer": "^12.6.0",
     "ora": "^8.2.0"
