--- a/package.json
+++ b/package.json
@@ -17,12 +17,37 @@
     "testEnvironment": "node",
     "coveragePathIgnorePatterns": [
       "/node_modules/"
+    ],
+    "globals": {
+      "NODE_OPTIONS": "--experimental-vm-modules"
+    },
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "^(\\.{1,2}/.*)\\.js$": "$1"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!mongoose|mongodb-memory-server|inquirer|chalk|figlet|commander|ora|npm-programmatic)/"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "node"
+    ],
+    "testMatch": [
+      "**/tests/**/*.test.js"
     ]
   },
   "author": "Amanpreet",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.1",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.4",
+    "mongoose": "^8.14.1",
     "supertest": "^6.3.4"
   },
   "dependencies": {
