--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --runInBand --coverage"
+    "test:ci": "jest --ci --runInBand --coverage",
+    "build": "babel src -d dist"
   },
   "jest": {
     "testEnvironment": "node",
@@ -19,7 +20,12 @@
       "/node_modules/"
     ],
     "transform": {
-      "^.+\\.js$": ["babel-jest", { "configFile": "./babel.config.js" }]
+      "^.+\\.js$": [
+        "babel-jest",
+        {
+          "configFile": "./babel.config.js"
+        }
+      ]
     },
     "moduleNameMapper": {
       "^(\\.{1,2}/.*)\\.js$": "$1"
