--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
       "^.+\\.js$": [
         "babel-jest",
         {
-          "configFile": "./babel.config.js"
+          "configFile": "./babel.config.cjs"
         }
       ]
     },
