--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,18 +1,46 @@
-publish-npm:
-  needs: test
-  if: github.event_name == 'release'
-  runs-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 20
-        registry-url: https://registry.npmjs.org/
-    - run: npm ci
-    - run: npm run build
-    - name: Publish to npm
-      run: |
-        echo "Publishing version $(npm pkg get version)"
-        npm publish --access public
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
+name: Node.js CI/CD
+
+on:
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
+  release:
+    types: [created]
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - run: npm ci
+      - run: npm run test:ci
+      - name: Upload coverage to Codecov
+        if: env.CODECOV_TOKEN
+        uses: codecov/codecov-action@v4
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
+  publish-npm:
+    needs: test
+    if: github.event_name == 'release'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          registry-url: https://registry.npmjs.org/
+      - run: npm ci
+      - name: Set package version
+        run: npm version ${{ github.event.release.tag_name }} --no-git-tag-version
+      - run: npm run build
+      - name: Publish to npm
+        run: |
+          echo "Publishing version $(npm pkg get version)"
+          npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
