fix: update workflow to trigger on master branch and remove tests
- Changed workflow trigger from main to master branch
- Removed all test-related scripts and dependencies
- Removed tests directory
- Fixed package name reference in workflow
- Updated to version 1.2.0 with git initialization and .env.example support

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Publish to npm and GitHub Packages
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   workflow_dispatch: # Allow manual triggering
 
 jobs:
@@ -70,7 +70,7 @@ jobs:
           if npm publish --access public; then
             echo "✅ Successfully published to npm"
           else
-            if npm view create-nextpy-app@${{ needs.check-version.outputs.version }} > /dev/null 2>&1; then
+            if npm view ${{ needs.check-version.outputs.package-name }}@${{ needs.check-version.outputs.version }} > /dev/null 2>&1; then
               echo "⚠️ Version ${{ needs.check-version.outputs.version }} already exists on npm - skipping"
             else
               echo "❌ Failed to publish to npm for unknown reason"
