--- a/package.json
+++ b/package.json
@@ -8,51 +8,14 @@
     "backtool": "index.js"
   },
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --runInBand --coverage",
     "build": "babel index.js backtool_folder -d dist"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ],
-    "transform": {
-      "^.+\\.js$": [
-        "babel-jest",
-        {
-          "configFile": "./babel.config.cjs"
-        }
-      ]
-    },
-    "moduleNameMapper": {
-      "^(\\.{1,2}/.*)\\.js$": "$1"
-    },
-    "transformIgnorePatterns": [
-      "node_modules/(?!mongoose|mongodb-memory-server|inquirer|chalk|figlet|commander|ora|npm-programmatic)/"
-    ],
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "node"
-    ],
-    "testMatch": [
-      "**/tests/**/*.test.js"
-    ]
   },
   "author": "Amanpreet",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.27.1",
     "@babel/core": "^7.27.1",
-    "@babel/preset-env": "^7.27.1",
-    "babel-jest": "^29.7.0",
-    "jest": "^29.7.0",
-    "mongodb-memory-server": "^10.1.4",
-    "mongoose": "^8.14.1",
-    "supertest": "^6.3.4"
+    "@babel/preset-env": "^7.27.1"
   },
   "dependencies": {
     "chalk": "^5.4.1",
